--- a/environment.ini
+++ b/environment.ini
@@ -4,5 +4,6 @@ food_energy=1
 n_meadows=15
 radius_mean_meadows=100
 radius_std_meadows=20
-growrate_mean_meadows=0.05
-growrate_std_meadows=0.005
+growrate_mean_meadows=0.1
+growrate_std_meadows=0.01
+probability_new_meadow=0.01
