refactored and smoothed main

--- a/animat.ini
+++ b/animat.ini
@@ -1,9 +1,10 @@
 n_animats=50
-size=0.5
-max_energy=100
-start_energy=50
+size=1
+max_energy=500
+start_energy=250
 max_velocity=10
 start_velocity=0
+max_age=600
 vision_range=30
 vision_angle=180
 olfactory_range=10
