--- a/animat.ini
+++ b/animat.ini
@@ -6,6 +6,7 @@ max_velocity=10
 start_velocity=0
 max_age=600
 vision_range=30
-vision_angle=180
+eye_angle_offset=0.5
+eye_vision_angle=1.57
 olfactory_range=10
 init_std_degree=0.1
