genome support and global vars rework

--- a/animat.ini
+++ b/animat.ini
@@ -1,5 +1,6 @@
 n_animats=200
 size=1
+reach=3
 max_energy=500
 start_energy=500
 max_velocity=5
@@ -9,4 +10,4 @@ vision_range=30
 eye_angle_offset=0.5
 eye_vision_angle=1.57
 olfactory_range=10
-init_std_degree=0.1
+n_concepts=21
